fixed problem with background not filling the whole page, and some spacing issues

--- a/source/css/style-rec.css
+++ b/source/css/style-rec.css
@@ -10,6 +10,11 @@ body {
   background-repeat: no-repeat;
 }
 
+html, body {
+  margin: 0;
+  height: 100%;
+}
+
 /* Below are styles for navbar */
 
 h1 {
@@ -111,6 +116,8 @@ h2 {
   list-style: none;
   text-align: center;
   margin-right: 50px;
+  margin-left: 20px;
+  padding-left: 5px;
   width: 150px;
   line-height: 1px;
   background-color: #f6f6f6;
@@ -143,8 +150,8 @@ h2 {
 }
 
 button {
-  padding: 10px 20px;
-  display: block;
+  padding-left: 20px;
+  display: inline-block;
   width: 130px;
   margin: 10px auto 0;
 }
