--- a/source/css/styleadd-book.css
+++ b/source/css/styleadd-book.css
@@ -10,6 +10,11 @@ body {
   background-repeat: no-repeat;
 }
 
+html, body {
+  margin: 0;
+  height: 100%;
+}
+
 h1 {
   color: rgb(237 237 237);
   font-size: 50px;
@@ -84,10 +89,27 @@ h1 {
   color: #fff;
 }
 
+form > h3 {
+    color: rgb(237 237 237);
+    font-size: 30px;
+    padding: 0.5em;
+    border-style: double;
+    border-radius: 0.2cm;
+    border-color: rgb(237 237 237);
+}
+
 form {
-  padding-top: 25px;
-  padding-left: 50px;
-  color: #fff;
+  margin: 15px;
+}
+
+input {
+  background-color: rgb(128 64 0 / 30%);
+  color: rgb(237 237 237);
+}
+
+textarea {
+  background-color: rgb(128 64 0 / 30%);
+  color: rgb(237 237 237);
 }
 
 form input {
