--- a/source/css/writing-tips.css
+++ b/source/css/writing-tips.css
@@ -10,6 +10,11 @@ body {
   background-repeat: no-repeat;
 }
 
+html, body {
+  margin: 0;
+  height: 100%;
+}
+
 h1 {
   color: rgb(237 237 237);
   font-size: 50px;
